--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16001,70 +16001,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Total divisa", -1, "Static", WS_GROUP, 7, 91, 54, 8
 }
 
-PREDIV DIALOG DISCARDABLE 140, 65, 598, 216
+PREDIV DIALOG DISCARDABLE 140, 65, 607, 252
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Precios por propiedades"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", 0x00200000, 3, 10, 108, 183
-  CONTROL "Todas", 111, "Button", WS_TABSTOP, 3, 197, 50, 14
-  CONTROL "Ninguna", 112, "Button", WS_TABSTOP, 61, 197, 50, 14
-  CONTROL "", 110, "TXBrowse", 0x00200000, 113, 10, 108, 183
-  CONTROL "Todas", 113, "Button", WS_TABSTOP, 113, 197, 50, 14
-  CONTROL "Ninguna", 114, "Button", WS_TABSTOP, 171, 197, 50, 14
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 290, 14, 278, 12
-  CONTROL "", 211, "TBtnBmp", 0x00000000, 570, 14, 12, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 290, 27, 292, 12
-  CONTROL "", 600, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 290, 58, 70, 12
-  CONTROL "Bloq.", 300, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 99, 32, 10
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 98, 38, 12
-  CONTROL "", 320, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 98, 49, 33
-  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 98, 70, 12
-  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 98, 70, 12
-  CONTROL "Bloq.", 350, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 113, 32, 10
-  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 112, 38, 12
-  CONTROL "", 370, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 112, 49, 33
-  CONTROL "", 380, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 112, 70, 12
-  CONTROL "", 390, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 112, 70, 12
-  CONTROL "Bloq.", 400, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 127, 32, 10
-  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 126, 38, 12
-  CONTROL "", 420, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 126, 49, 33
-  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 126, 70, 12
-  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 126, 70, 12
-  CONTROL "Bloq.", 450, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 141, 32, 10
-  CONTROL "", 460, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 140, 38, 12
-  CONTROL "", 470, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 140, 49, 33
-  CONTROL "", 480, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 140, 70, 12
-  CONTROL "", 490, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 140, 70, 12
-  CONTROL "Bloq.", 500, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 155, 32, 10
-  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 154, 38, 12
-  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 154, 49, 33
-  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 154, 70, 12
-  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 154, 70, 12
-  CONTROL "Bloq.", 550, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 169, 32, 10
-  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 326, 168, 38, 12
-  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 367, 168, 49, 33
-  CONTROL "", 580, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 429, 168, 70, 12
-  CONTROL "", 590, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 511, 168, 70, 12
-  CONTROL "&Añadir", IDOK, "Button", WS_TABSTOP, 490, 197, 50, 14
-  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 545, 197, 50, 14
-  CONTROL "Precios de venta", -1, "Button", BS_GROUPBOX, 228, 77, 363, 112
-  CONTROL "Precio 1", -1, "Static", WS_GROUP, 241, 101, 35, 10
-  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 282, 88, 139, 96
-  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 425, 88, 78, 96
-  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 506, 88, 80, 96
-  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 233, 88, 45, 96
-  CONTROL "Precio 2", -1, "Static", WS_GROUP, 241, 115, 35, 10
-  CONTROL "Precio 3", -1, "Static", WS_GROUP, 241, 129, 35, 10
-  CONTROL "Precio 4", -1, "Static", WS_GROUP, 241, 143, 35, 10
-  CONTROL "Precio 5", -1, "Static", WS_GROUP, 241, 157, 35, 10
-  CONTROL "Precio 6", -1, "Static", WS_GROUP, 241, 171, 35, 10
-  CONTROL "Compras", -1, "Button", BS_GROUPBOX, 228, 49, 363, 25
-  CONTROL "Costo", 401, "Static", WS_GROUP, 241, 61, 21, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 225, 43, 369, 151
-  CONTROL "Web", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 226, 6, 368, 38
-  CONTROL "Tooltip", -1, "Static", WS_GROUP, 232, 30, 51, 8
-  CONTROL "Imagen", -1, "Static", WS_GROUP, 232, 17, 51, 8
+  CONTROL "&Añadir", IDOK, "Button", WS_TABSTOP, 498, 235, 50, 14
+  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 553, 235, 50, 14
+  CONTROL "", 200, "SysTabControl32", WS_TABSTOP, 3, 3, 601, 230
 }
 
 PREDIVPNT DIALOG DISCARDABLE 140, 65, 370, 242
@@ -19935,5 +19879,71 @@ FONT 8, "MS Sans Serif"
   CONTROL "Almacen", -1, "Static", WS_GROUP, 4, 15, 33, 8
   CONTROL "Stock mínimo", -1, "Static", WS_GROUP, 4, 29, 49, 8
   CONTROL "Stock maximo", -1, "Static", WS_GROUP, 4, 43, 49, 8
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+PREDIV01 DIALOG DISCARDABLE 64, -21, 600, 212
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "TXBrowse", 0x00200000, 5, 3, 108, 183
+  CONTROL "Todas", 111, "Button", WS_TABSTOP, 5, 190, 50, 14
+  CONTROL "Ninguna", 112, "Button", WS_TABSTOP, 63, 190, 50, 14
+  CONTROL "", 110, "TXBrowse", 0x00200000, 115, 3, 108, 183
+  CONTROL "Todas", 113, "Button", WS_TABSTOP, 115, 190, 50, 14
+  CONTROL "Ninguna", 114, "Button", WS_TABSTOP, 173, 190, 50, 14
+  CONTROL "", 600, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 291, 15, 70, 12
+  CONTROL "Bloq.", 300, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 289, 56, 32, 10
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 327, 55, 38, 12
+  CONTROL "", 320, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 368, 55, 49, 33
+  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 430, 55, 70, 12
+  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 512, 55, 70, 12
+  CONTROL "Bloq.", 350, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 289, 70, 32, 10
+  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 327, 69, 38, 12
+  CONTROL "", 370, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 368, 69, 49, 33
+  CONTROL "", 380, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 430, 69, 70, 12
+  CONTROL "", 390, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 512, 69, 70, 12
+  CONTROL "Bloq.", 400, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 289, 84, 32, 10
+  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 327, 83, 38, 12
+  CONTROL "", 420, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 368, 83, 49, 33
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 430, 83, 70, 12
+  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 512, 83, 70, 12
+  CONTROL "Bloq.", 450, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 289, 98, 32, 10
+  CONTROL "", 460, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 327, 97, 38, 12
+  CONTROL "", 470, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 368, 97, 49, 33
+  CONTROL "", 480, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 430, 97, 70, 12
+  CONTROL "", 490, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 512, 97, 70, 12
+  CONTROL "Bloq.", 500, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 289, 112, 32, 10
+  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 327, 111, 38, 12
+  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 368, 111, 49, 33
+  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 430, 111, 70, 12
+  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 512, 111, 70, 12
+  CONTROL "Bloq.", 550, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 289, 126, 32, 10
+  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 327, 125, 38, 12
+  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 368, 125, 49, 33
+  CONTROL "", 580, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 430, 125, 70, 12
+  CONTROL "", 590, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 512, 125, 70, 12
+  CONTROL "Precios de venta", -1, "Button", BS_GROUPBOX, 229, 34, 363, 112
+  CONTROL "Precio 1", 4001, "Static", WS_GROUP, 242, 58, 35, 10
+  CONTROL "%Beneficio", 4002, "Button", BS_GROUPBOX, 283, 45, 139, 96
+  CONTROL "Neto", 4003, "Button", BS_GROUPBOX, 426, 45, 78, 96
+  CONTROL "Impuestos incluidos", 4004, "Button", BS_GROUPBOX, 507, 45, 80, 96
+  CONTROL "Precios", 4005, "Button", BS_GROUPBOX, 234, 45, 45, 96
+  CONTROL "Precio 2", 4006, "Static", WS_GROUP, 242, 72, 35, 10
+  CONTROL "Precio 3", 4007, "Static", WS_GROUP, 242, 86, 35, 10
+  CONTROL "Precio 4", 4008, "Static", WS_GROUP, 242, 100, 35, 10
+  CONTROL "Precio 5", 4009, "Static", WS_GROUP, 242, 114, 35, 10
+  CONTROL "Precio 6", 4010, "Static", WS_GROUP, 242, 128, 35, 10
+  CONTROL "Compras", 4011, "Button", BS_GROUPBOX, 229, 6, 363, 25
+  CONTROL "Costo", 401, "Static", WS_GROUP, 242, 18, 21, 8
+  CONTROL "", 4012, "Button", BS_GROUPBOX|WS_TABSTOP, 226, 0, 369, 151
+}
+
+PREDIV02 DIALOG DISCARDABLE 64, -21, 600, 212
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 110, "TXBrowse", 0x00200000, 5, 3, 588, 203
 }
 
