--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4371,6 +4371,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 190, "Static", WS_BORDER|WS_GROUP, 136, 98, 328, 10
   CONTROL "", 200, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP|0x00200000, 54, 127, 410, 189
   CONTROL "Importar pedidos", 520, "Button", WS_TABSTOP, 44, 354, 59, 14
+  CONTROL "Actualiza stock", 530, "Button", WS_TABSTOP, 280, 354, 59, 14
   CONTROL "Exportar datos", 510, "Button", WS_TABSTOP, 342, 354, 59, 14
   CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 403, 354, 61, 14
   CONTROL "Procesando...", 210, "Static", WS_GROUP, 54, 318, 342, 8
