--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1217,7 +1217,7 @@ FONT 20, "Segoe UI"
   CONTROL "0", 300, "Static", SS_RIGHT|WS_GROUP, 50, 124, 63, 12
 }
 
-ARQUEO_4_TCT DIALOG DISCARDABLE -47, 69, 350, 201
+ARQUEO_4_TCT DIALOG DISCARDABLE -47, 69, 350, 202
 STYLE WS_CHILD|WS_VISIBLE
 FONT 12, "Segoe UI"
 {
@@ -1231,8 +1231,9 @@ FONT 12, "Segoe UI"
   CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 6, 104, 80, 72
   CONTROL "Comentarios", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 2, 344, 78
   CONTROL "Opciones impresión", 610, "Button", BS_MULTILINE|WS_TABSTOP, 307, 92, 36, 22
-  CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 172, 118, 10
-  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 24, 184, 87, 10
+  CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 170, 118, 10
+  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 24, 179, 87, 10
+  CONTROL "Actualización stocks en prestashop", 740, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 187, 130, 10
 }
 
 ARQUEO_4 DIALOG DISCARDABLE -47, 69, 605, 318
@@ -1241,11 +1242,11 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "Comentarios", -1, "Button", BS_GROUPBOX|WS_DISABLED, 45, 26, 557, 131
   CONTROL "Opciones de impresión", 601, "Button", BS_GROUPBOX|WS_DISABLED, 44, 159, 558, 62
-  CONTROL "Más opciones", 701, "Button", BS_GROUPBOX|WS_DISABLED, 44, 264, 558, 41
+  CONTROL "Más opciones", 701, "Button", BS_GROUPBOX|WS_DISABLED, 44, 264, 558, 51
   CONTROL "Notificación", 721, "Button", BS_GROUPBOX|WS_DISABLED, 44, 222, 558, 40
   CONTROL "", 200, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 51, 39, 545, 111
   CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 276, 125, 10
-  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 79, 290, 125, 10
+  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 79, 289, 125, 10
   CONTROL "No imprimir arqueo", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 172, 71, 10
   CONTROL "Enviar email ", 720, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 235, 79, 10
   CONTROL "", 730, "Edit", WS_BORDER|WS_TABSTOP, 51, 247, 545, 11
@@ -1254,6 +1255,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 79, 184, 98, 72
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Apunte de agenda", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "Actualización stocks en prestashop", 740, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 302, 130, 10
 }
 
 DTO_TCT DIALOG DISCARDABLE 240, 79, 164, 154
@@ -2054,15 +2056,16 @@ FONT 12, "Segoe UI"
   CONTROL "", 200, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 6, 12, 337, 22
   CONTROL "No imprimir arqueo", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 49, 71, 8
   CONTROL "Impresión", -1, "Button", BS_GROUPBOX|WS_DISABLED, 3, 38, 343, 36
-  CONTROL "Opciones", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 112, 343, 31
-  CONTROL "Enviar email ", 720, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 87, 53, 8
-  CONTROL "Notificación", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 76, 343, 34
-  CONTROL "", 730, "Edit", WS_BORDER|WS_TABSTOP, 6, 97, 300, 10
+  CONTROL "Opciones", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 106, 343, 37
+  CONTROL "Enviar email ", 720, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 83, 53, 8
+  CONTROL "Notificación", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 74, 343, 32
+  CONTROL "", 730, "Edit", WS_BORDER|WS_TABSTOP, 6, 93, 300, 10
   CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 6, 59, 80, 72
   CONTROL "Comentarios", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 2, 344, 35
   CONTROL "Opciones de impresión", 610, "Button", BS_MULTILINE|WS_TABSTOP, 298, 44, 45, 28
-  CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 122, 118, 8
-  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 24, 131, 87, 8
+  CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 115, 118, 8
+  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 24, 124, 87, 8
+  CONTROL "Actualización stocks en prestashop", 740, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 132, 130, 10
 }
 
 CASHBIG_1024X576 DIALOG DISCARDABLE -9, -141, 230, 169
