--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5525,7 +5525,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Formato clientes: apellidos, nombre", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 220, 125, 10
   CONTROL "Ocultar botón de exportación", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 208, 129, 10
   CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 381, 177, 43, 12
-  CONTROL "TBtnBmp", 150, "TBtnBmp", 0x00000000, 412, 191, 12, 13
+  CONTROL "", 150, "TBtnBmp", 0x00000000, 412, 191, 12, 13
   CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 245, 207, 12
   CONTROL "", 260, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 245, 44, 12
   CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 259, 207, 12
