--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -418,7 +418,7 @@ FONT 8, "MS Sans Serif"
 }
 
 ARQUEO_3 DIALOG DISCARDABLE -47, 69, 605, 318
-STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 800, "TXBrowse", WS_TABSTOP|0x00a00000, 44, 58, 557, 193
