--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -913,7 +913,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "General", -1, "Button", BS_GROUPBOX, 44, 29, 336, 36
   CONTROL "Código de barras", -1, "Button", BS_GROUPBOX, 382, 29, 108, 251
   CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 44, 67, 336, 73
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 220, 336, 61
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 45, 219, 336, 61
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 76, 11
   CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 51, 279, 11
   CONTROL "Añ&d [F2]", 300, "Button", WS_TABSTOP, 387, 39, 33, 14
@@ -932,10 +932,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 357, "TBitMap", 0x00800000, 363, 112, 14, 11
   CONTROL "", 390, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 124, 56, 11
   CONTROL "", 391, "Edit", WS_BORDER, 156, 124, 221, 11
-  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 232, 73, 10
-  CONTROL "Producto obsoleto ", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 243, 256, 128, 10
+  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 242, 73, 10
+  CONTROL "Producto obsoleto ", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 244, 266, 128, 10
   CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 192, 90, 10
   CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 98, 205, 55, 10
+  CONTROL "", 220, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 228, 279, 11
   CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 153, 88, 10
   CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 98, 165, 101, 11
   CONTROL "Código", -1, "Static", WS_GROUP, 49, 42, 33, 8
@@ -950,12 +951,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "Lote actual", -1, "Static", WS_GROUP, 49, 168, 41, 8
   CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 142, 336, 37
   CONTROL "Numero de serie", -1, "Button", BS_GROUPBOX, 44, 181, 336, 37
-  CONTROL "Aplicar factor de conversión", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 244, 101, 10
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 98, 256, 62, 11
-  CONTROL "Factor", 4001, "Static", WS_GROUP, 49, 256, 33, 8
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 288, 232, 41, 11
-  CONTROL "", 251, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 332, 232, 41, 41
-  CONTROL "Caducidad", -1, "Static", WS_GROUP, 243, 235, 40, 8
+  CONTROL "Aplicar factor de conversión", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 254, 101, 10
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 98, 265, 62, 11
+  CONTROL "Factor", 4001, "Static", WS_GROUP, 49, 268, 33, 8
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 289, 242, 41, 11
+  CONTROL "", 251, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 332, 242, 45, 41
+  CONTROL "Caducidad", -1, "Static", WS_GROUP, 244, 245, 40, 8
+  CONTROL "Ubicación", -1, "Static", WS_GROUP, 49, 231, 39, 8
 }
 
 ART_10 DIALOG DISCARDABLE 32, 6, 496, 286
