--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17686,7 +17686,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 578, 310, 80, 8
   CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 578, 328, 80, 8
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 89, 357, 108, 11
-  CONTROL "Entrega en", 112, "Static", WS_GROUP, 44, 57, 37, 8
+  CONTROL "Entrega", 112, "Static", WS_GROUP, 44, 57, 37, 8
   CONTROL "Referencia", 123, "Static", WS_GROUP, 44, 69, 37, 8
   CONTROL "", 201, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE|SS_RIGHTJUST, 518, 90, 16, 11
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
@@ -17712,17 +17712,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 301, "Edit", WS_BORDER, 174, 125, 184, 12
   CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 100, 138, 72, 12
   CONTROL "", 166, "Edit", WS_BORDER, 174, 138, 184, 12
-  CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 49, 165, 40, 10
-  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 164, 86, 12
-  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 188, 164, 50, 12
+  CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 49, 153, 40, 10
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 151, 114, 12
+  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 216, 151, 50, 12
   CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 420, 111, 64, 12
   CONTROL "", 236, "Edit", WS_BORDER, 485, 111, 169, 12
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 420, 124, 234, 12
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 420, 137, 88, 12
-  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 420, 149, 70, 12
+  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 420, 151, 70, 12
   CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 137, 102, 12
-  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 149, 102, 12
-  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 161, 102, 12
+  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 151, 102, 12
+  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 165, 102, 12
   CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 192, 552, 12
   CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 205, 552, 46
   CONTROL "&Añadir [F2]", 500, "Button", WS_TABSTOP, 49, 269, 50, 14
@@ -17736,10 +17736,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "Retirado por", -1, "Static", WS_GROUP, 378, 127, 40, 8
   CONTROL "Condición", -1, "Static", WS_GROUP, 49, 195, 40, 8
   CONTROL "Comentarios", -1, "Static", WS_GROUP, 49, 206, 42, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 102, 319, 76
+  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 104, 319, 76
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 181, 616, 74
-  CONTROL "Matrícula", -1, "Static", WS_GROUP, 378, 140, 40, 8
-  CONTROL "Bultos", -1, "Static", WS_GROUP, 378, 152, 40, 8
+  CONTROL "Matrícula", -1, "Static", WS_GROUP, 378, 141, 40, 8
+  CONTROL "Bultos", -1, "Static", WS_GROUP, 378, 155, 40, 8
   CONTROL "Entregas a cuenta", -1, "Button", BS_GROUPBOX, 44, 258, 471, 115
   CONTROL "", -1, "Button", BS_GROUPBOX, 522, 258, 138, 86
   CONTROL "Total pedido", -1, "Static", WS_GROUP, 529, 269, 44, 8
@@ -17749,10 +17749,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "Diferencia", -1, "Static", WS_GROUP, 529, 357, 44, 8
   CONTROL "0", 560, "Static", SS_RIGHT|WS_GROUP, 602, 357, 50, 8
   CONTROL "Delegación", -1, "Static", WS_GROUP, 49, 128, 39, 8
-  CONTROL "Lógistica", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 372, 102, 288, 76
-  CONTROL "Total peso", -1, "Static", WS_GROUP, 513, 152, 38, 8
-  CONTROL "TARA", -1, "Static", WS_GROUP, 513, 140, 38, 8
-  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 513, 164, 38, 8
+  CONTROL "Lógistica", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 372, 104, 288, 76
+  CONTROL "Total peso", -1, "Static", WS_GROUP, 513, 155, 38, 8
+  CONTROL "TARA", -1, "Static", WS_GROUP, 513, 141, 38, 8
+  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 513, 169, 38, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 522, 346, 138, 27
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "S.A.T. de clientes", -1, "Static", WS_GROUP, 44, 3, 120, 8
@@ -17760,6 +17760,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 116, "Edit", WS_BORDER, 174, 112, 184, 12
   CONTROL "Usuario", -1, "Static", WS_GROUP, 49, 115, 46, 8
   CONTROL "Averia", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 616, 70
+  CONTROL "Hora inicio", -1, "Static", WS_GROUP, 49, 169, 34, 8
+  CONTROL "", 590, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 165, 50, 12
+  CONTROL "Hora fin", -1, "Static", WS_GROUP, 175, 169, 34, 8
+  CONTROL "", 591, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 216, 165, 50, 12
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
