--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19951,3 +19951,132 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "TXBrowse", 0x00200000, 1, 3, 330, 277
 }
 
+LSATCLI_2 DIALOG DISCARDABLE 16, 4, 359, 212
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 1, 30, 12
+  CONTROL "No imprimir línea ", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 15, 75, 10
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 26, 60, 12
+  CONTROL "Línea de control", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 40, 75, 10
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 100, 52, 60, 12
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 100, 79, 255, 12
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 100, 92, 60, 12
+  CONTROL "", 151, "Edit", WS_BORDER, 161, 92, 194, 12
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 100, 104, 60, 12
+  CONTROL "", 161, "Edit", WS_BORDER, 161, 104, 194, 12
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 100, 117, 60, 12
+  CONTROL "", 201, "Edit", WS_BORDER, 161, 117, 194, 12
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 130, 100, 12
+  CONTROL "Nº Línea", -1, "Static", WS_GROUP, 5, 4, 30, 8
+  CONTROL "Precio vta. recomendado", -1, "Static", WS_GROUP, 5, 55, 80, 8
+  CONTROL "Fecha de entrega", -1, "Static", WS_GROUP, 5, 29, 66, 8
+  CONTROL "Imágen ", -1, "Static", WS_GROUP, 5, 81, 73, 8
+  CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 5, 95, 55, 8
+  CONTROL "Familia", -1, "Static", WS_GROUP, 5, 107, 55, 8
+  CONTROL "Margen", 301, "Static", WS_GROUP, 5, 132, 24, 8
+  CONTROL "Línea de escandallo", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 143, 78, 10
+  CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 156, 79, 10
+  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 170, 68, 10
+  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 183, 49, 10
+  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 196, 71, 10
+  CONTROL "Proveedor", -1, "Static", WS_GROUP, 5, 120, 55, 8
+  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 100, 66, 255, 12
+  CONTROL "Ubicación", -1, "Static", WS_GROUP, 5, 68, 73, 8
+}
+
+LSATCLI_1 DIALOG DISCARDABLE 150, 93, 359, 232
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 2, 65, 11
+  CONTROL "", 111, "Edit", NOT WS_VISIBLE|ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 64
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 25
+  CONTROL "", 112, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 16, 65, 11
+  CONTROL "", 340, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 29, 65, 11
+  CONTROL "", 270, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 42, 65, 11
+  CONTROL "", 272, "Edit", NOT WS_VISIBLE|WS_BORDER, 122, 42, 234, 11
+  CONTROL "", 280, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 55, 65, 11
+  CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 122, 55, 234, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 81, 65, 11
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 95, 65, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 108, 65, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 121, 65, 11
+  CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 134, 65, 11
+  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 147, 65, 11
+  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 160, 65, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 173, 65, 11
+  CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 186, 65, 11
+  CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 199, 65, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 81, 70, 11
+  CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 218, 65, 11
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 68, 70, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 95, 70, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 301, 95, 54, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 70, 11
+  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 301, 108, 54, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 121, 70, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 249, 121, 108, 11
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 178, 134, 70, 11
+  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 249, 134, 108, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 178, 147, 70, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 249, 147, 108, 11
+  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 160, 70, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 173, 51, 11
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 230, 173, 18, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 173, 50, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 338, 173, 19, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 178, 186, 179, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 178, 199, 70, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 178, 218, 70, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 249, 199, 108, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 217, 70, 11
+  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 250, 69, 63, 10
+  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 173, 23, 11
+  CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 176, 25, 8
+  CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 111, 48, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 4, 221, 34, 8
+  CONTROL "Descuento ", -1, "Static", WS_GROUP, 123, 98, 42, 8
+  CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 124, 43, 8
+  CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 5, 36, 8
+  CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 84, 36, 8
+  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 250, 98, 49, 8
+  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 111, 47, 8
+  CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 202, 47, 8
+  CONTROL "Propiedad 2", 281, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 57, 51, 8
+  CONTROL "Propiedad 1", 271, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 44, 51, 8
+  CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 123, 84, 37, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 176, 19, 8
+  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 150, 37, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 123, 202, 45, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 214, 354, 11
+  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 123, 71, 34, 8
+  CONTROL "Costo", 321, "Static", WS_GROUP, 123, 221, 23, 8
+  CONTROL "Nº lote", 113, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 18, 50, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 137, 45, 8
+  CONTROL "Portes", 351, "Static", WS_GROUP, 4, 189, 42, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 250, 176, 31, 8
+  CONTROL "", 521, "Static", WS_GROUP, 4, 137, 42, 8
+  CONTROL "", 541, "Static", WS_GROUP, 4, 163, 47, 8
+  CONTROL "", 531, "Static", WS_GROUP, 4, 150, 42, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 124, 47, 8
+  CONTROL "Comisión ", -1, "Static", WS_GROUP, 250, 111, 35, 8
+  CONTROL "Caducidad", 341, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 32, 41, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 163, 35, 8
+  CONTROL "Bultos", 451, "Static", WS_GROUP, 4, 98, 48, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 189, 35, 8
+  CONTROL "Stock", -1, "Static", WS_GROUP, 250, 220, 22, 8
+  CONTROL "", 256, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 55, 68, 65, 11
+  CONTROL "Contador", 257, "Static", WS_GROUP, 4, 71, 36, 8
+}
+
+LSATCLI_3 DIALOG DISCARDABLE 135, 103, 359, 218
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 110, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 3, 296, 105
+  CONTROL "", 100, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 111, 296, 105
+  CONTROL "Observaciones", -1, "Static", WS_GROUP, 4, 111, 53, 8
+  CONTROL "Descipción larga", -1, "Static", WS_GROUP, 4, 3, 53, 8
+}
+
