--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -97,3 +97,5 @@ flat_page_down_64 BITMAP "..\\bmp\\flat_page_down_64.bmp"
 flat_left_64 BITMAP "..\\bmp\\flat_left_64.bmp"
 flat_right_64 BITMAP "..\\bmp\\flat_right_64.bmp"
 flat_printer_64 BITMAP "..\\bmp\\flat_printer_64.bmp"
+control_panel2_alpha_48 BITMAP "..\\bmp\\control_panel2_alpha_48.bmp"
+control_panel2_48 BITMAP "..\\bmp\\control_panel2_48.bmp"
