--- a/resource/Rptapolo.rc
+++ b/resource/Rptapolo.rc
@@ -7783,10 +7783,10 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 5, 10, 92, 11
   CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 106, 10, 68, 100
-  CONTROL "", 120, "txbrowse", WS_TABSTOP|0x00b00000, 2, 27, 175, 100
+  CONTROL "", 120, "ixbrowse", WS_TABSTOP|0x00b00000, 2, 27, 175, 100
   CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 185, 10, 246, 11
   CONTROL "", 230, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 440, 10, 68, 100
-  CONTROL "", 130, "txbrowse", WS_TABSTOP|0x00b00000, 181, 27, 332, 100
+  CONTROL "", 130, "ixbrowse", WS_TABSTOP|0x00b00000, 181, 27, 332, 100
   CONTROL "&Nuevo", 260, "Button", WS_TABSTOP, 1, 129, 50, 14
   CONTROL "&Subir", 240, "Button", WS_TABSTOP, 58, 129, 50, 14
   CONTROL "&Bajar", 250, "Button", WS_TABSTOP, 113, 129, 50, 14
@@ -7796,7 +7796,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "G&uardar", 190, "Button", WS_TABSTOP, 346, 129, 50, 14
   CONTROL "&Cargar", 200, "Button", WS_TABSTOP, 401, 129, 50, 14
   CONTROL "Actuali&zar", 210, "Button", WS_TABSTOP, 455, 129, 50, 14
-  CONTROL "", 170, "txbrowse", WS_TABSTOP|0x00b00000, 2, 145, 511, 100
+  CONTROL "", 170, "ixbrowse", WS_TABSTOP|0x00b00000, 2, 145, 511, 100
   CONTROL "Buscar familia", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 0, 98, 25
   CONTROL "Orden familia", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 101, 0, 77, 25
   CONTROL "Buscar artículo", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 181, 0, 252, 25
