--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11983,63 +11983,63 @@ LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 261
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Imp. incluido", 90, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 11, 60, 12
+  CONTROL "Imp. incluido", 90, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 12, 60, 10
   CONTROL "", 80, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 91, 10, 28, 12
-  CONTROL "", 230, "Edit", ES_RIGHT|WS_BORDER|WS_GROUP, 91, 31, 60, 12
-  CONTROL "", 500, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 57, 10, 12
-  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 57, 38, 12
-  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 57, 49, 33
-  CONTROL "", 530, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 57, 70, 12
-  CONTROL "", 540, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 280, 57, 70, 12
-  CONTROL "", IDOK, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 71, 10, 12
-  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 71, 38, 12
-  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 71, 49, 33
-  CONTROL "", 580, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 71, 70, 12
-  CONTROL "", 590, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 71, 70, 12
-  CONTROL "", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 85, 10, 12
-  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 85, 38, 12
-  CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 85, 49, 33
-  CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 85, 70, 12
-  CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 85, 70, 12
-  CONTROL "", 650, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 98, 10, 12
-  CONTROL "", 660, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 99, 38, 12
-  CONTROL "", 670, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 99, 49, 33
-  CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 99, 70, 12
-  CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 99, 70, 12
-  CONTROL "", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 112, 10, 12
-  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 113, 38, 12
-  CONTROL "", 720, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 113, 49, 33
-  CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 113, 70, 12
-  CONTROL "", 740, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 113, 70, 12
-  CONTROL "", 750, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 126, 10, 12
-  CONTROL "", 760, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 127, 38, 12
-  CONTROL "", 770, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 127, 49, 33
-  CONTROL "", 780, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 127, 70, 12
-  CONTROL "", 790, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 127, 70, 12
-  CONTROL "Guardar nuevos precios de compra", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 145, 130, 12
-  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 7, 166, 68, 10
-  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 177, 49, 10
-  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 188, 71, 10
+  CONTROL "", 230, "Edit", ES_RIGHT|WS_BORDER|WS_GROUP, 91, 33, 91, 12
+  CONTROL "", 500, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 59, 10, 12
+  CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 59, 38, 12
+  CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 59, 49, 33
+  CONTROL "", 530, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 59, 70, 12
+  CONTROL "", 540, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 280, 59, 70, 12
+  CONTROL "", IDOK, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 73, 10, 12
+  CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 73, 38, 12
+  CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 73, 49, 33
+  CONTROL "", 580, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 73, 70, 12
+  CONTROL "", 590, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 73, 70, 12
+  CONTROL "", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 87, 10, 12
+  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 87, 38, 12
+  CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 87, 49, 33
+  CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 87, 70, 12
+  CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 87, 70, 12
+  CONTROL "", 650, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 100, 10, 12
+  CONTROL "", 660, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 101, 38, 12
+  CONTROL "", 670, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 101, 49, 33
+  CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 101, 70, 12
+  CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 101, 70, 12
+  CONTROL "", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 114, 10, 12
+  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 115, 38, 12
+  CONTROL "", 720, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 115, 49, 33
+  CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 115, 70, 12
+  CONTROL "", 740, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 115, 70, 12
+  CONTROL "", 750, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 128, 10, 12
+  CONTROL "", 760, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 129, 38, 12
+  CONTROL "", 770, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 129, 49, 33
+  CONTROL "", 780, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 129, 70, 12
+  CONTROL "", 790, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 129, 70, 12
+  CONTROL "Guardar nuevos precios de compra", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 147, 130, 10
+  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 7, 175, 68, 10
+  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 187, 49, 10
+  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 7, 199, 71, 10
+  CONTROL "Línea facturada", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 217, 64, 10
   CONTROL "Impuestos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 1, 352, 24
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 23, 352, 24
-  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 8, 34, 65, 8
-  CONTROL "Precio 1", -1, "Static", WS_GROUP, 8, 58, 30, 10
-  CONTROL "Precio 2", -1, "Static", WS_GROUP, 8, 72, 30, 10
-  CONTROL "Precio 3", -1, "Static", WS_GROUP, 8, 86, 30, 10
-  CONTROL "Precio 4", -1, "Static", WS_GROUP, 8, 100, 30, 10
-  CONTROL "Precio 5", -1, "Static", WS_GROUP, 8, 114, 30, 10
-  CONTROL "Precio 6", -1, "Static", WS_GROUP, 8, 128, 30, 10
-  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 47, 47, 139, 96
-  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 190, 47, 82, 96
-  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 274, 47, 82, 96
-  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 3, 47, 42, 96
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 58, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 73, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 86, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 100, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 114, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 128, 23, 10
-  CONTROL "Stock", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 157, 352, 43
+  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 25, 352, 136
+  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 8, 36, 65, 8
+  CONTROL "Precio 1", -1, "Static", WS_GROUP, 8, 60, 30, 10
+  CONTROL "Precio 2", -1, "Static", WS_GROUP, 8, 74, 30, 10
+  CONTROL "Precio 3", -1, "Static", WS_GROUP, 8, 88, 30, 10
+  CONTROL "Precio 4", -1, "Static", WS_GROUP, 8, 102, 30, 10
+  CONTROL "Precio 5", -1, "Static", WS_GROUP, 8, 116, 30, 10
+  CONTROL "Precio 6", -1, "Static", WS_GROUP, 8, 130, 30, 10
+  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 47, 49, 139, 96
+  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 190, 49, 82, 96
+  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 274, 49, 82, 96
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 60, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 75, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 88, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 102, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 116, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 130, 23, 10
+  CONTROL "Stock", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 164, 352, 49
 }
 
 LALBPRV_3 DIALOG DISCARDABLE 26, 35, 360, 261
