--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -592,7 +592,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 48, 346, 88, 11
   CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 346, 46, 11
   CONTROL "", 490, "TXBrowse", WS_TABSTOP|0x00300000, 208, 295, 321, 73
-  CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 540, 320, 33, 10
+  CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 540, 330, 33, 10
   CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 97, 30, 24, 11
   CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 121, 30, 37, 11
   CONTROL "", 105, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 158, 30, 17, 11
@@ -621,12 +621,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "%", 702, "Static", WS_GROUP, 186, 322, 8, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 330, 93, 30, 8
   CONTROL "Neto", 705, "Static", WS_GROUP, 540, 297, 33, 8
-  CONTROL "Impuestos", 706, "Static", WS_GROUP, 540, 309, 33, 8
+  CONTROL "Impuestos", 706, "Static", WS_GROUP, 540, 320, 33, 8
   CONTROL "0", 370, "Static", SS_RIGHT|WS_GROUP, 595, 297, 65, 8
-  CONTROL "0", 380, "Static", SS_RIGHT|WS_GROUP, 595, 309, 65, 8
-  CONTROL "0", 390, "Static", SS_RIGHT|WS_GROUP, 595, 321, 65, 8
+  CONTROL "0", 380, "Static", SS_RIGHT|WS_GROUP, 595, 320, 65, 8
+  CONTROL "0", 390, "Static", SS_RIGHT|WS_GROUP, 595, 331, 65, 8
   CONTROL "", 420, "Static", WS_GROUP, 540, 353, 33, 16
-  CONTROL "0", 410, "Static", SS_RIGHT|WS_GROUP, 595, 353, 65, 16
+  CONTROL "0", 410, "Static", SS_RIGHT|WS_GROUP, 583, 353, 77, 16
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 43, 295, 158, 73
   CONTROL "%", 703, "Static", WS_GROUP, 186, 335, 8, 8
   CONTROL "%", 704, "Static", WS_GROUP, 186, 347, 8, 8
@@ -634,6 +634,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Albaranes de proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
   CONTROL "Origen", 342, "Static", WS_GROUP, 454, 45, 26, 8
+  CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 595, 308, 65, 8
+  CONTROL "Imp. especiales", 4001, "Static", WS_GROUP, 540, 309, 54, 8
 }
 
 ALBPRV_2 DIALOG DISCARDABLE 4, 18, 670, 375
@@ -6831,7 +6833,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 482, 78, 70, 11
   CONTROL "", 166, "Edit", WS_BORDER, 554, 78, 108, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 482, 90, 70, 11
-  CONTROL "", 171, "TBitMap", 0x00800000, 554, 90, 19, 11
+  CONTROL "", 171, "TBitmap", 0x00800000, 554, 90, 19, 11
   CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 575, 90, 87, 11
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 91, 102, 85, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 115, 50, 14
@@ -6851,9 +6853,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 50, 344, 80, 11
   CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 344, 44, 11
   CONTROL "", 490, "TXBrowse", WS_TABSTOP|0x00300000, 198, 296, 296, 74
-  CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 501, 314, 27, 10
-  CONTROL "", 440, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 501, 329, 53, 40
-  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 555, 329, 34, 13
+  CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 501, 326, 27, 10
+  CONTROL "", 440, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 501, 337, 53, 40
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 555, 337, 34, 13
   CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 30, 26, 11
   CONTROL "", 101, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 118, 30, 38, 11
   CONTROL "", 102, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 157, 30, 19, 11
@@ -6882,15 +6884,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "%", 702, "Static", WS_GROUP, 179, 320, 8, 8
   CONTROL "%", 703, "Static", WS_GROUP, 179, 332, 8, 8
   CONTROL "%", 704, "Static", WS_GROUP, 179, 345, 8, 8
-  CONTROL "Neto", 705, "Static", WS_GROUP, 501, 297, 18, 8
-  CONTROL "Impuestos", 706, "Static", WS_GROUP, 501, 306, 41, 8
-  CONTROL "0", 370, "Static", SS_RIGHT|WS_GROUP, 554, 297, 103, 8
-  CONTROL "0", 380, "Static", SS_RIGHT|WS_GROUP, 554, 306, 103, 8
-  CONTROL "0", 390, "Static", SS_RIGHT|WS_GROUP, 554, 315, 103, 8
-  CONTROL "0", 410, "Static", SS_RIGHT|WS_GROUP, 551, 349, 106, 21
+  CONTROL "Neto", 705, "Static", WS_GROUP, 501, 296, 18, 8
+  CONTROL "Impuestos", 706, "Static", WS_GROUP, 501, 316, 41, 8
+  CONTROL "0", 370, "Static", SS_RIGHT|WS_GROUP, 557, 296, 100, 8
+  CONTROL "0", 380, "Static", SS_RIGHT|WS_GROUP, 557, 316, 100, 8
+  CONTROL "0", 390, "Static", SS_RIGHT|WS_GROUP, 557, 326, 100, 8
+  CONTROL "0", 410, "Static", SS_RIGHT|WS_GROUP, 551, 353, 106, 21
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 43, 292, 148, 76
-  CONTROL "", 420, "Static", WS_GROUP, 501, 349, 36, 22
-  CONTROL "0", 491, "Static", SS_RIGHT|WS_GROUP, 605, 332, 52, 8
+  CONTROL "", 420, "Static", WS_GROUP, 501, 353, 36, 22
+  CONTROL "0", 491, "Static", SS_RIGHT|WS_GROUP, 594, 340, 63, 8
   CONTROL "Concepto", 707, "Static", WS_GROUP, 44, 119, 33, 8
   CONTROL "", 600, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 296, 60, 11
   CONTROL "Base 1", 708, "Static", WS_GROUP, 44, 299, 27, 8
@@ -6921,6 +6923,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "IBAN", -1, "Static", WS_GROUP, 450, 69, 31, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Facturas a proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 557, 305, 100, 8
+  CONTROL "Imp. especiales", -1, "Static", WS_GROUP, 501, 306, 54, 8
 }
 
 FACPRV_2 DIALOG DISCARDABLE 29, 33, 670, 375
@@ -11934,49 +11938,51 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 15, 393, 80
   CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 99, 38, 11
   CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 112, 65, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 124, 65, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 137, 65, 11
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 150, 65, 11
-  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 163, 65, 11
-  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 176, 65, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 188, 65, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 99, 44, 11
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 111, 44, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 330, 111, 65, 11
-  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 181, 124, 44, 11
-  CONTROL "", 153, "Edit", WS_BORDER, 226, 124, 169, 11
-  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 181, 137, 214, 11
-  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 181, 163, 70, 11
-  CONTROL "", 331, "Edit", WS_BORDER, 253, 163, 142, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 176, 70, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 253, 176, 142, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 125, 65, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 138, 65, 11
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 151, 65, 11
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 164, 65, 11
+  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 177, 65, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 190, 65, 11
+  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 203, 65, 11
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 185, 99, 64, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 185, 112, 44, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 185, 125, 44, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 185, 138, 65, 11
+  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 185, 151, 44, 11
+  CONTROL "", 153, "Edit", WS_BORDER, 230, 151, 164, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 185, 164, 209, 11
+  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 185, 177, 66, 11
+  CONTROL "", 331, "Edit", WS_BORDER, 252, 177, 142, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 185, 190, 66, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 252, 190, 142, 11
   CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 221, 65, 12
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 330, 220, 65, 12
-  CONTROL "Descuento", -1, "Static", WS_GROUP, 132, 102, 40, 8
-  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 127, 59, 8
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 308, 220, 86, 12
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 132, 115, 40, 8
+  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 128, 23, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 3, 224, 34, 8
-  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 140, 57, 8
-  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 191, 57, 8
+  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 141, 57, 8
+  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 193, 57, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
   CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 102, 49, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
-  CONTROL "Alm. destino", -1, "Static", WS_GROUP, 132, 179, 43, 8
+  CONTROL "Alm. destino", -1, "Static", WS_GROUP, 132, 193, 43, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 216, 397, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
-  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 132, 114, 34, 8
-  CONTROL "Rappels", -1, "Static", WS_GROUP, 252, 114, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 254, 223, 49, 8
-  CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 153, 57, 8
-  CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 166, 57, 8
-  CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 179, 57, 8
+  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 132, 128, 34, 8
+  CONTROL "Rappels", -1, "Static", WS_GROUP, 132, 141, 31, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 252, 223, 49, 8
+  CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 154, 57, 8
+  CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 167, 57, 8
+  CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 180, 57, 8
   CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 29, 41, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 132, 127, 47, 8
-  CONTROL "Punto verde", 172, "Static", WS_GROUP, 3, 204, 47, 8
-  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 201, 65, 11
-  CONTROL "Alm. origen", 332, "Static", WS_GROUP, 132, 166, 40, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 132, 154, 47, 8
+  CONTROL "Punto verde", 172, "Static", WS_GROUP, 3, 206, 47, 8
+  CONTROL "Alm. origen", 332, "Static", WS_GROUP, 132, 180, 40, 8
   CONTROL "Bultos", 451, "Static", WS_GROUP, 3, 114, 59, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 132, 138, 47, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 132, 167, 31, 8
+  CONTROL "Imp. especial", 126, "Static", WS_GROUP, 132, 102, 47, 8
 }
 
 LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 261
@@ -13098,40 +13104,42 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 146, 65, 11
   CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 159, 65, 11
   CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 172, 65, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 184, 65, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 96, 44, 11
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 108, 44, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 331, 108, 65, 11
-  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 181, 120, 44, 11
-  CONTROL "", 153, "Edit", WS_BORDER, 227, 120, 169, 11
-  CONTROL "", 480, "Edit", WS_BORDER|WS_TABSTOP, 181, 133, 214, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 146, 70, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 253, 146, 142, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 185, 65, 11
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 97, 64, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 120, 44, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 133, 44, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 146, 65, 11
+  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 181, 159, 44, 11
+  CONTROL "", 153, "Edit", WS_BORDER, 227, 159, 169, 11
+  CONTROL "", 480, "Edit", WS_BORDER|WS_TABSTOP, 181, 172, 214, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 185, 70, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 253, 185, 142, 11
+  CONTROL "Gastos suplidos", 460, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 329, 98, 63, 10
   CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 215, 65, 11
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 331, 214, 65, 11
-  CONTROL "Descuento", -1, "Static", WS_GROUP, 131, 99, 40, 8
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 309, 214, 86, 11
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 131, 123, 40, 8
   CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 124, 59, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 3, 218, 34, 8
   CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 136, 57, 8
-  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 187, 57, 8
+  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 188, 57, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
   CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 99, 49, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
-  CONTROL "Almacen", -1, "Static", WS_GROUP, 131, 149, 41, 8
+  CONTROL "Almacen", -1, "Static", WS_GROUP, 131, 188, 41, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 211, 397, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
-  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 131, 111, 34, 8
-  CONTROL "Rappels", -1, "Static", WS_GROUP, 296, 111, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 252, 217, 49, 8
+  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 131, 136, 34, 8
+  CONTROL "Rappels", -1, "Static", WS_GROUP, 131, 149, 31, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 253, 217, 49, 8
   CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 149, 57, 8
   CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 162, 57, 8
   CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 175, 57, 8
   CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 29, 41, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 131, 123, 47, 8
-  CONTROL "Gastos suplidos", 460, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 227, 98, 63, 10
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 131, 162, 47, 8
   CONTROL "Bultos", 471, "Static", WS_GROUP, 3, 111, 59, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 131, 136, 41, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 131, 175, 41, 8
+  CONTROL "Imp. especial", 126, "Static", WS_GROUP, 131, 100, 47, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
